srv/externos/campus-jaragua-gw/netbox/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: netbox
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: netbox
    spec:
      containers:
        - image: postgres:9.6
          name: netbox-postgresql
          volumeMounts:
            - name: netbox-postgresql-base
              mountPath: "/var/lib/postgresql/data/pgdata"
        - image: netboxcommunity/netbox
          name: netbox-netbox
          volumeMounts:
            - name: netbox-netbox-static
              mountPath: /opt/netbox/netbox/static
        - image: nginx:1.13.1
          name: netbox-nginx
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: netbox-nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: netbox-netbox-static
              mountPath: /opt/netbox/netbox/static
      restartPolicy: Always
      volumes:
      - name: netbox-secret
        secret:
          secretName: netbox-secret
      - name: netbox-postgresql-base
        persistentVolumeClaim:
          claimName: netbox-postgresql-base
      - name: netbox-nginx-conf
        configMap:
          name: netbox-nginx-conf
      - name: netbox-netbox-static
        emptyDir: {}
