srv/externos/campus-jaragua-gw/netbox/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netbox
  name: netbox
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: netbox
