srv/externos/campus-jaragua-gw/netbox/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: netbox
  annotations:
    # Solução para pedir usuário e senha para acessar:
    # https://github.com/kubernetes/contrib/tree/master/ingress/controllers/nginx/examples/auth
    # type of authentication
    # nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Netbox SJE"
    #
    # Solução para liberar somente à redes definidas
    nginx.ingress.kubernetes.io/whitelist-source-range: "191.36.0.0/17,2804:1454::/32,172.30.0.0/24,172.18.0.0/18"
spec:
  tls:
    - hosts:
        - netboxgw.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard
  rules:
    - host: netboxgw.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: netbox
              servicePort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: gtampto
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 'https://netboxrau.sj.ifsc.edu.br'
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: netbox.gw.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: netbox
              servicePort: 80
